Fixed bug with note layout
Fixed bug where causing the note width to be >200px would misalign the status bar icons (delete and single view)

files modified:
Note.less
Notes.less

Also styles commit for last commit attempting to add cancel edit button

--- a/note-app/src/styles/less/Notes/Note.less
+++ b/note-app/src/styles/less/Notes/Note.less
@@ -3,10 +3,11 @@
 
 	border: solid 1px;
 
-	.NoteEditConfirmButton {
+	.SingleNoteViewButtons {
 		.button(@height: 25px);
 
 		margin: 0 auto;
+		margin-top: 12px;
 
 		font-size: 0.9rem;
 
