--- a/note-app/src/styles/less/Notes/Notes.less
+++ b/note-app/src/styles/less/Notes/Notes.less
@@ -50,8 +50,12 @@
 		}
 
 		.NoteContainer {
+			width: 100%;
+
 			margin: 24px;
 			margin-top: 0;
+
+			padding: 0 24px;
 		}
 	}
 }
